# gemini2-device-connect

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  gemini2.config.example.yaml  install.sh  pyproject.toml  requirements.txt  run_driver.sh
.github/workflows/: ci.yml
src/gemini2_device_connect/: __init__.py  __main__.py  config.py  driver.py  orbbec_camera.py
tests/: conftest.py  test_config.py  test_driver.py  test_orbbec_camera.py
